cabal-version:      3.4
name:               pr-state
version:            0.1.0.0
-- synopsis:
-- description:
license:            BSD-3-Clause
license-file:       LICENSE
author:             Jann Müller
maintainer:         j-mueller@users.noreply.github.com
-- copyright:
category:           Development
build-type:         Simple
extra-doc-files:    CHANGELOG.md
-- extra-source-files:

common warnings
    ghc-options: -Wall

library
    import:           warnings
    exposed-modules:
        PrState,
        PrState.API
    -- other-modules:
    -- other-extensions:
    build-depends:
        base ^>=4.17.2.1,
        github,
        text,
        containers,
        prettyprinter,
        mtl,
        parallel-io
    hs-source-dirs:   src
    default-language: Haskell2010

executable pr-state
    import:           warnings
    main-is:          Main.hs
    -- other-modules:
    -- other-extensions:
    build-depends:
        base ^>=4.17.2.1,
        pr-state

    hs-source-dirs:   exe
    default-language: Haskell2010
    ghc-options:    -threaded -rtsopts -O2 -with-rtsopts=-N
